--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <p class="pillar-category">STRUCTURE & <br> GOVERNANCE</p>
         <h3>  Fractional CHRO <br> Leadership </h3>
         <p>
-          We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR systems architecture, we transform fragmented operations into structured, performance-driven infrastructure that strengthens leadership accountability, governance, and strategic execution.
+          We re-engineer HR into a scalable growth engine. From fractional CHRO leadership to intelligent HR systems architecture, we transform fragmented operations into performance-driven infrastructure that strengthens leadership accountability, governance, and strategic execution.
         </p>
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Organizational clarity, accountability, and strategic alignment.
