--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
 <!-- Hero -->
 <section id="home" class="hero">
   <div class="hero-content">
-    <h1>Is Your HR Ready for the Next Phase of Growth?</h1>
+    <h1>Engineering Future-Ready Human Capital Systems.</h1>
     <br class="heading-break" aria-hidden="true" />
-    <p>Stop firefighting and start building a strategic workforce. 
-      Lakeside Human Capital delivers enterprise-grade HR consulting powered by real-time people analytics and integrated wellbeing systems, turning people operations into a measurable competitive advantage.</p>
+    <p>We design strategic HR architecture powered by data, behavioral intelligence, and integrated workforce wellbeing — transforming HR into a measurable growth engine.</p>
     <br class="heading-break" aria-hidden="true" />
-    <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Book a Free 30-mins Strategy Call</a>
+    <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Schedule a Strategic Consultation</a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
   </div>
 </section>
