--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="hero-content">
     <h1>Engineering Future-Ready Human Capital Systems.</h1>
     <br class="heading-break" aria-hidden="true" />
-    <p>At Lakeside Human Capital, we design strategic HR architecture powered by data, behavioral intelligence, and integrated workforce wellbeing — transforming HR into a measurable growth engine.</p>
+    <p>At Lakeside Human Capital, we design strategic HR architecture powered by data, behavioral intelligence, and integrated workforce well-being — transforming HR into a measurable engine of growth.</p>
     <br class="heading-break" aria-hidden="true" />
     <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Schedule a Strategic Consultation</a>
     <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-secondary">Get Your Free HR Health Check</a>
