--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
   <div class="hero-content">
     <h1>Engineering Future-Ready Human Capital Systems.</h1>
     <br class="heading-break" aria-hidden="true" />
+
+    <p class="hero-subline">
+  A Core Vertical of Lakeside Asia Holdings
+</p>
+
     <p>At Lakeside Human Capital, we design strategic HR architecture powered by data, behavioral intelligence, and integrated workforce well-being — transforming HR into a measurable engine of growth.</p>
     <br class="heading-break" aria-hidden="true" />
     <a href="https://calendly.com/sweetyvasani/30min" target="_blank" class="btn-primary">Schedule a Strategic Consultation</a>
