--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 
       <!-- Primary Card -->
       <div class="ecosystem-card primary">
-        <div class="icon">🏢</div>
+        <div class="icon">
+  <i class="fas fa-building"></i>
+</div>
         <h3>Lakeside Human Capital</h3>
         <p>HR Strategy & CHRO Architecture</p>
         <a href="#" class="learn-more">Learn More →</a>
@@ -99,7 +101,9 @@
 
       <!-- Health -->
       <div class="ecosystem-card">
-        <div class="icon">💚</div>
+        <div class="icon health">
+  <i class="fas fa-heartbeat"></i>
+</div>
         <h3>Lakeside Health</h3>
         <p>Mental Wellness & Workforce Resilience</p>
         <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Learn More →</a>
@@ -107,7 +111,9 @@
 
       <!-- Happiness -->
       <div class="ecosystem-card">
-        <div class="icon">📊</div>
+        <div class="icon happiness">
+  <i class="fas fa-chart-line"></i>
+</div>
         <h3>Lakeside Happiness</h3>
         <p>Culture & Behavioral Intelligence</p>
         <a href="https://rohitnalwade.github.io/Happiness/" target="_blank" class="learn-more">Learn More →</a>
@@ -115,7 +121,9 @@
 
       <!-- BreathEasier -->
       <div class="ecosystem-card">
-        <div class="icon">🌿</div>
+        <div class="icon breathe">
+  <i class="fas fa-leaf"></i>
+</div>
         <h3>Lakeside BreathEasier</h3>
         <p>Performance-Focused Work Environments</p>
         <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Learn More →</a>
