--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
   <i class="fas fa-building"></i>
 </div>
         <h3>Lakeside Human Capital</h3>
-        <p>HR Strategy & CHRO Architecture</p>
-        <a href="#" class="learn-more">Learn More →</a>
+        <h4 class="card-subtitle">HR Strategy & CHRO Architecture</h4>
+        <p>
+    We design scalable HR strategy, fractional CHRO leadership, and performance-driven people systems that align business growth with workforce execution.
+  </p>
+        <a href="#" class="learn-more">Explore Human Capital →</a>
       </div>
 
       <!-- Health -->
@@ -105,8 +108,11 @@
   <i class="fas fa-heartbeat"></i>
 </div>
         <h3>Lakeside Health</h3>
-        <p>Mental Wellness & Workforce Resilience</p>
-        <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Learn More →</a>
+        <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
+          <p>
+    Evidence-based mental wellness and resilience frameworks that reduce stress, strengthen leadership stability, and protect workforce performance.
+  </p>
+        <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Explore Health →</a>
       </div>
 
       <!-- Happiness -->
@@ -115,8 +121,11 @@
   <i class="fas fa-chart-line"></i>
 </div>
         <h3>Lakeside Happiness</h3>
-        <p>Culture & Behavioral Intelligence</p>
-        <a href="https://rohitnalwade.github.io/Happiness/" target="_blank" class="learn-more">Learn More →</a>
+        <h4 class="card-subtitle">Culture & Behavioral Intelligence</h4>
+          <p>
+    Applied behavioral intelligence systems that identify cultural risks, engagement gaps, and structural friction before performance declines.
+  </p>
+        <a href="https://rohitnalwade.github.io/Happiness/" target="_blank" class="learn-more">Explore Happiness →</a>
       </div>
 
       <!-- BreathEasier -->
@@ -125,8 +134,11 @@
   <i class="fas fa-leaf"></i>
 </div>
         <h3>Lakeside BreathEasier</h3>
-        <p>Performance-Focused Work Environments</p>
-        <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Learn More →</a>
+        <h4 class="card-subtitle">Performance-Focused Work Environments</h4>
+        <p>
+    We engineer performance-oriented environments that enhance cognitive clarity, indoor air quality, and sustained executive function at scale.
+  </p>
+        <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Explore BreathEasier →</a>
       </div>
 
     </div>
