--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <!-- Primary Card -->
       <div class="ecosystem-card primary">
         <div class="icon">
-  <i class="fas fa-building"></i>
+  <i class="fas fa-sitemap"></i>
 </div>
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & CHRO Architecture</h4>
@@ -105,7 +105,7 @@
       <!-- Health -->
       <div class="ecosystem-card">
         <div class="icon health">
-  <i class="fas fa-heartbeat"></i>
+  <i class="fas fa-heart"></i>
 </div>
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
