--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
     <div class="section-header">
       <h2>Our Integrated Human Performance Network</h2>
       <p>
-        Lakeside Human Capital collaborates with <strong>Lakeside Health</strong>, <strong>Lakeside Happiness </strong>, and <strong>Lakeside BreathEasier </strong> to deliver connected systems that strengthen HR architecture, workforce resilience, cultural intelligence, and performance-focused environments.
+        Lakeside Human Capital collaborates with <span class="highlight-blue">Lakeside Health</span>, 
+  <span class="highlight-blue">Lakeside Happiness</span>, and 
+  <span class="highlight-blue">Lakeside BreathEasier</span>  to deliver connected systems that strengthen HR architecture, workforce resilience, cultural intelligence, and performance-focused environments.
       </p>
     </div>
 
