--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <!-- Primary Card -->
       <div class="ecosystem-card primary">
         <div class="icon">
-  <i class="fas fa-sitemap"></i>
+  <i class="fas fa-network-wired"></i>
 </div>
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & CHRO Architecture</h4>
@@ -107,7 +107,7 @@
       <!-- Health -->
       <div class="ecosystem-card">
         <div class="icon health">
-  <i class="fas fa-heart"></i>
+  <i class="fas fa-heart-pulse"></i>
 </div>
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
@@ -120,7 +120,7 @@
       <!-- Happiness -->
       <div class="ecosystem-card">
         <div class="icon happiness">
-  <i class="fas fa-chart-line"></i>
+  <i class="fas fa-chart-simple"></i>
 </div>
         <h3>Lakeside Happiness</h3>
         <h4 class="card-subtitle">Culture & Behavioral Intelligence</h4>
@@ -133,7 +133,7 @@
       <!-- BreathEasier -->
       <div class="ecosystem-card">
         <div class="icon breathe">
-  <i class="fas fa-leaf"></i>
+  <i class="fas fa-wind"></i>
 </div>
         <h3>Lakeside BreathEasier</h3>
         <h4 class="card-subtitle">Performance-Focused Work Environments</h4>
