--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
       <!-- Primary Card -->
       <div class="ecosystem-card primary">
-        <div class="icon">
+        <div class="icon-wrapper">
   <i class="fas fa-network-wired"></i>
 </div>
         <h3>Lakeside Human Capital</h3>
@@ -106,7 +106,7 @@
 
       <!-- Health -->
       <div class="ecosystem-card">
-        <div class="icon health">
+        <div class="icon-wrapper">
   <i class="fas fa-heart-pulse"></i>
 </div>
         <h3>Lakeside Health</h3>
@@ -119,7 +119,7 @@
 
       <!-- Happiness -->
       <div class="ecosystem-card">
-        <div class="icon happiness">
+        <div class="icon-wrapper">
   <i class="fas fa-chart-simple"></i>
 </div>
         <h3>Lakeside Happiness</h3>
@@ -132,7 +132,7 @@
 
       <!-- BreathEasier -->
       <div class="ecosystem-card">
-        <div class="icon breathe">
+        <div class="icon-wrapper">
   <i class="fas fa-wind"></i>
 </div>
         <h3>Lakeside BreathEasier</h3>
