--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <i class="fas fa-network-wired"></i>
 </div>
         <h3>Lakeside Human Capital</h3>
-        <h4 class="card-subtitle">HR Strategy & CHRO Architecture</h4>
+        <h4 class="card-subtitle">HR Strategy & <br>CHRO Architecture</h4>
         <p>
     We design scalable HR strategy, fractional CHRO leadership, and performance-driven people systems that align business growth with workforce execution.
   </p>
@@ -123,7 +123,7 @@
   <i class="fas fa-chart-simple"></i>
 </div>
         <h3>Lakeside Happiness</h3>
-        <h4 class="card-subtitle">Culture & Behavioral Intelligence</h4>
+        <h4 class="card-subtitle">Culture & Behavioral <br>Intelligence</h4>
           <p>
     Applied behavioral intelligence systems that identify cultural risks, engagement gaps, and structural friction before performance declines.
   </p>
