--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & <br>CHRO Architecture</h4>
         <p>
-    We design scalable HR strategy, fractional CHRO leadership, and performance-driven people systems that align business growth with workforce execution.
+    We re-engineer HR into a scalable growth engine. Through fractional CHRO leadership and intelligent HR architecture, we transform fragmented people operations into performance-driven infrastructure that strengthens governance, leadership accountability, and strategic execution.
   </p>
+
+                <p class="pillar-outcome">
+          <span class="outcome-label">Outcome:</span>  Organizational clarity, Accountability, and Strategic alignment.
+        </p>
+        
         <a href="#" class="learn-more">Explore Human Capital →</a>
       </div>
 
@@ -112,8 +117,12 @@
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
           <p>
-    Evidence-based mental wellness and resilience frameworks that reduce stress, strengthen leadership stability, and protect workforce performance.
+    We integrate clinical mental wellness into workforce strategy — reducing cognitive strain, strengthening leadership stability, and protecting sustained performance.
   </p>
+
+        <p class="pillar-outcome">
+          <span class="outcome-label">Outcome:</span>  Reduced decision fatigue. Leadership resilience.
+        </p>
         <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Explore Health →</a>
       </div>
 
@@ -125,8 +134,12 @@
         <h3>Lakeside Happiness</h3>
         <h4 class="card-subtitle">Culture & Behavioral <br>Intelligence</h4>
           <p>
-    Applied behavioral intelligence systems that identify cultural risks, engagement gaps, and structural friction before performance declines.
+    We apply behavioral intelligence to surface cultural risk, engagement gaps, and structural friction — before performance declines become visible.
   </p>
+
+                <p class="pillar-outcome">
+          <span class="outcome-label">Outcome:</span>  Early risk detection. Sustainable cultural strength.
+        </p>
         <a href="https://rohitnalwade.github.io/Happiness/" target="_blank" class="learn-more">Explore Happiness →</a>
       </div>
 
@@ -138,8 +151,12 @@
         <h3>Lakeside BreathEasier</h3>
         <h4 class="card-subtitle">Performance-Focused Work Environments</h4>
         <p>
-    We engineer performance-oriented environments that enhance cognitive clarity, indoor air quality, and sustained executive function at scale.
+    We engineer performance-focused work environments that optimize cognitive clarity, air quality, and sustained executive function at scale.
   </p>
+
+        <p class="pillar-outcome">
+          <span class="outcome-label">Outcome:</span>  Enhanced cognitive output. Executive endurance.
+        </p>
         <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Explore BreathEasier →</a>
       </div>
 
