--- a/index.html
+++ b/index.html
@@ -82,11 +82,13 @@
 
     <div class="section-header">
       <h2>Our Integrated Human Performance Network</h2>
-      <p>
-        Lakeside Human Capital collaborates with <span class="highlight-blue">Lakeside Health</span>, 
-  <span class="highlight-blue">Lakeside Happiness</span>, and 
-  <span class="highlight-blue">Lakeside BreathEasier</span>  to deliver connected systems that strengthen HR architecture, workforce resilience, cultural intelligence, and performance-focused environments.
-      </p>
+      <div class="framework-intro">
+  <h3 class="framework-title">
+    A Four-Dimensional Performance Architecture for Scalable Organizations
+  </h3>
+        <p class="framework-description">
+    Lakeside Human Capital collaborates with <strong>Lakeside Health</strong>, <strong>Lakeside Happiness</strong>, and <strong>Lakeside BreathEasier</strong> to architect connected performance systems that strengthen governance, workforce resilience, cultural intelligence, and performance-oriented environments — operating as one unified infrastructure for sustained organizational scale.
+  </p>
     </div>
 
     <div class="ecosystem-grid">
