--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     <div class="section-header">
       <h2>Our Integrated Human Performance Network</h2>
       <div class="framework-intro">
-  <h3 class="framework-title">
+  <p class="framework-line">
     A Four-Dimensional Performance Architecture for Scalable Organizations
-  </h3>
-        <p class="framework-description">
+  </p>
+        <p>
     Lakeside Human Capital collaborates with <strong>Lakeside Health</strong>, <strong>Lakeside Happiness</strong>, and <strong>Lakeside BreathEasier</strong> to architect connected performance systems that strengthen governance, workforce resilience, cultural intelligence, and performance-oriented environments — operating as one unified infrastructure for sustained organizational scale.
   </p>
     </div>
