--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     Lakeside Human Capital collaborates with <strong>Lakeside Health</strong>, <strong>Lakeside Happiness</strong>, and <strong>Lakeside BreathEasier</strong> to architect connected performance systems that strengthen governance, workforce resilience, cultural intelligence, and performance-oriented environments — operating as one unified infrastructure for sustained organizational scale.
   </p>
     </div>
-
+</div>
     <div class="ecosystem-grid">
 
       <!-- Primary Card -->
