--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     A Four-Dimensional Performance Architecture for Scalable Organizations
   </p>
         <p>
-    Lakeside Human Capital collaborates with <strong>Lakeside Health</strong>, <strong>Lakeside Happiness</strong>, and <strong>Lakeside BreathEasier</strong> to architect connected performance systems that strengthen governance, workforce resilience, cultural intelligence, and performance-oriented environments — operating as one unified infrastructure for sustained organizational scale.
+    Lakeside Human Capital collaborates with <span class="highlight-blue">Lakeside Health</span>, <span class="highlight-blue">Lakeside Happiness</span>, and <span class="highlight-blue">Lakeside BreathEasier</span>  to architect connected performance systems that strengthen governance, workforce resilience, cultural intelligence, and performance-oriented environments — operating as one unified infrastructure for sustained organizational scale.
   </p>
     </div>
 </div>
