--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & <br>CHRO Architecture</h4>
         <p>
-    We re-engineer HR into a scalable growth engine. Through fractional CHRO leadership and intelligent HR architecture, we transform fragmented people operations into performance-driven infrastructure that strengthens governance, leadership accountability, and strategic execution.
+    We re-engineer HR into a scalable growth engine. Through fractional CHRO leadership and enterprise-grade HR architecture, we convert fragmented people operations into structured governance systems that strengthen leadership accountability, execution discipline, and strategic alignment.
   </p>
 
                 <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Organizational clarity, Accountability, and Strategic alignment.
+          <span class="outcome-label">Outcome:</span>  Organizational clarity | Governance maturity | Scalable performance infrastructure
         </p>
         
         <a href="#" class="learn-more">Explore Human Capital →</a>
@@ -119,11 +119,11 @@
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
           <p>
-    We integrate clinical mental wellness into workforce strategy — reducing cognitive strain, strengthening leadership stability, and protecting sustained performance.
+    We embed clinical mental resilience into workforce architecture — reducing cognitive strain, stabilizing leadership capacity, and safeguarding sustained performance in high-pressure environments.
   </p>
 
         <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Reduced decision fatigue. Leadership resilience.
+          <span class="outcome-label">Outcome:</span>  Reduced decision fatigue | Leadership resilience | Protected productivity
         </p>
         <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Explore Health →</a>
       </div>
@@ -136,11 +136,10 @@
         <h3>Lakeside Happiness</h3>
         <h4 class="card-subtitle">Culture & Behavioral <br>Intelligence</h4>
           <p>
-    We apply behavioral intelligence to surface cultural risk, engagement gaps, and structural friction — before performance declines become visible.
-  </p>
+We deploy behavioral intelligence frameworks to identify cultural risk, engagement gaps, and structural misalignment before performance erosion becomes visible.  </p>
 
                 <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Early risk detection. Sustainable cultural strength.
+          <span class="outcome-label">Outcome:</span>  Early risk detection | Sustainable cultural strength.
         </p>
         <a href="https://rohitnalwade.github.io/Happiness/" target="_blank" class="learn-more">Explore Happiness →</a>
       </div>
@@ -153,11 +152,10 @@
         <h3>Lakeside BreathEasier</h3>
         <h4 class="card-subtitle">Performance-Focused Work Environments</h4>
         <p>
-    We engineer performance-focused work environments that optimize cognitive clarity, air quality, and sustained executive function at scale.
-  </p>
+We engineer performance-oriented work environments that enhance cognitive clarity, optimize environmental conditions, and sustain executive function at scale.  </p>
 
         <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Enhanced cognitive output. Executive endurance.
+          <span class="outcome-label">Outcome:</span>  Enhanced cognitive output | Executive endurance | Measurable workplace performance
         </p>
         <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Explore BreathEasier →</a>
       </div>
