--- a/index.html
+++ b/index.html
@@ -101,11 +101,10 @@
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & <br>CHRO Architecture</h4>
         <p>
-    We re-engineer HR into a scalable growth engine. Through fractional CHRO leadership and enterprise-grade HR architecture, we convert fragmented people operations into structured governance systems that strengthen leadership accountability, execution discipline, and strategic alignment.
-  </p>
+Fragmented HR systems dilute accountability and slow strategic execution. Through fractional CHRO leadership and enterprise-grade HR architecture, we re-engineer people operations into structured governance infrastructure. This enables leadership discipline, organizational clarity, and scalable performance alignment.  </p>
 
                 <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Organizational clarity | Governance maturity | Scalable performance infrastructure
+          <span class="outcome-label">Outcome:</span>  Organizational clarity | Governance maturity | Strategic execution at scale
         </p>
         
         <a href="#" class="learn-more">Explore Human Capital →</a>
@@ -119,11 +118,10 @@
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
           <p>
-    We embed clinical mental resilience into workforce architecture — reducing cognitive strain, stabilizing leadership capacity, and safeguarding sustained performance in high-pressure environments.
-  </p>
+Psychological strain and decision fatigue silently erode leadership effectiveness and workforce stability. We integrate clinical mental resilience into workforce architecture, embedding evidence-based frameworks that stabilize leadership capacity. This transforms mental well-being into measurable organizational strength.  </p>
 
         <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Reduced decision fatigue | Leadership resilience | Protected productivity
+          <span class="outcome-label">Outcome:</span>  Reduced decision fatigue | Leadership stability | Protected productivity
         </p>
         <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Explore Health →</a>
       </div>
@@ -136,7 +134,7 @@
         <h3>Lakeside Happiness</h3>
         <h4 class="card-subtitle">Culture & Behavioral <br>Intelligence</h4>
           <p>
-We deploy behavioral intelligence frameworks to identify cultural risk, engagement gaps, and structural misalignment before performance erosion becomes visible.  </p>
+Engagement gaps and structural misalignment rarely surface until performance declines become visible. We deploy behavioral intelligence systems that identify hidden cultural risks before erosion occurs. This strengthens alignment and builds sustainable cultural resilience.  </p>
 
                 <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Early risk detection | Sustainable cultural strength.
@@ -152,10 +150,10 @@ We deploy behavioral intelligence frameworks to identify cultural risk, engageme
         <h3>Lakeside BreathEasier</h3>
         <h4 class="card-subtitle">Performance-Focused Work Environments</h4>
         <p>
-We engineer performance-oriented work environments that enhance cognitive clarity, optimize environmental conditions, and sustain executive function at scale.  </p>
+Environmental stressors and workspace design directly influence cognitive clarity and executive function. We engineer performance-oriented environments that optimize air quality and workplace conditions at scale. This protects sustained cognitive output and organizational performance.  </p>
 
         <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Enhanced cognitive output | Executive endurance | Measurable workplace performance
+          <span class="outcome-label">Outcome:</span>  Enhanced executive function | Cognitive clarity | Measurable workplace performance
         </p>
         <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Explore BreathEasier →</a>
       </div>
