--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & <br>CHRO Architecture</h4>
         <p>
-Fragmented HR systems dilute accountability and slow strategic execution. Through fractional CHRO leadership and enterprise-grade HR architecture, we re-engineer people operations into structured governance infrastructure. This enables leadership discipline, organizational clarity, and scalable performance alignment.  </p>
+Fragmented HR systems dilute accountability and slow execution. Through fractional CHRO leadership and enterprise-grade HR architecture, we re-engineer people operations into structured governance infrastructure. This enables leadership discipline and scalable performance alignment.  </p>
 
                 <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Organizational clarity | Governance maturity | Strategic execution at scale
@@ -118,7 +118,7 @@ Fragmented HR systems dilute accountability and slow strategic execution. Throug
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
           <p>
-Psychological strain and decision fatigue silently erode leadership effectiveness and workforce stability. We integrate clinical mental resilience into workforce architecture, embedding evidence-based frameworks that stabilize leadership capacity. This transforms mental well-being into measurable organizational strength.  </p>
+Psychological strain and decision fatigue erode leadership effectiveness and workforce stability. We integrate clinical mental resilience into workforce architecture, stabilizing leadership capacity in high-pressure environments. This transforms well-being into measurable organizational strength.  </p>
 
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Reduced decision fatigue | Leadership stability | Protected productivity
