--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h3>Lakeside Human Capital</h3>
         <h4 class="card-subtitle">HR Strategy & <br>CHRO Architecture</h4>
         <p>
-Fragmented HR systems dilute accountability and slow execution. Through fractional CHRO leadership and enterprise-grade HR architecture, we re-engineer people operations into structured governance infrastructure. This enables leadership discipline and scalable performance alignment.  </p>
+Fragmented HR systems dilute accountability and slow execution. We re-engineer people operations through fractional CHRO leadership and enterprise-grade HR architecture. This creates structured governance and scalable performance alignment. </p>
 
                 <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Organizational clarity | Governance maturity | Strategic execution at scale
@@ -118,7 +118,7 @@ Fragmented HR systems dilute accountability and slow execution. Through fraction
         <h3>Lakeside Health</h3>
         <h4 class="card-subtitle">Mental Wellness & Workforce Resilience</h4>
           <p>
-Psychological strain and decision fatigue erode leadership effectiveness and workforce stability. We integrate clinical mental resilience into workforce architecture, stabilizing leadership capacity in high-pressure environments. This transforms well-being into measurable organizational strength.  </p>
+Psychological strain and decision fatigue erode leadership effectiveness. We embed clinical mental resilience into workforce architecture in high-pressure environments. This stabilizes leadership capacity and protects sustained productivity.  </p>
 
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Reduced decision fatigue | Leadership stability | Protected productivity
@@ -134,7 +134,7 @@ Psychological strain and decision fatigue erode leadership effectiveness and wor
         <h3>Lakeside Happiness</h3>
         <h4 class="card-subtitle">Culture & Behavioral <br>Intelligence</h4>
           <p>
-Engagement gaps and structural misalignment rarely surface until performance declines become visible. We deploy behavioral intelligence systems that identify hidden cultural risks before erosion occurs. This strengthens alignment and builds sustainable cultural resilience.  </p>
+Engagement gaps and structural misalignment rarely surface until performance declines become visible. We deploy behavioral intelligence systems that identify hidden cultural risks before erosion occurs. This strengthens alignment and builds sustainable cultural resilience. </p>
 
                 <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Early risk detection | Sustainable cultural strength.
@@ -150,7 +150,7 @@ Engagement gaps and structural misalignment rarely surface until performance dec
         <h3>Lakeside BreathEasier</h3>
         <h4 class="card-subtitle">Performance-Focused Work Environments</h4>
         <p>
-Environmental stressors and workspace design directly influence cognitive clarity and executive function. We engineer performance-oriented environments that optimize air quality and workplace conditions at scale. This protects sustained cognitive output and organizational performance.  </p>
+Environmental stressors directly influence cognitive clarity and executive function. We engineer performance-oriented environments that optimize air quality and workplace conditions at scale. This protects sustained cognitive output and measurable performance.  </p>
 
         <p class="pillar-outcome">
           <span class="outcome-label">Outcome:</span>  Enhanced executive function | Cognitive clarity | Measurable workplace performance
