--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 Fragmented HR systems dilute accountability and slow execution. We re-engineer people operations through fractional CHRO leadership and enterprise-grade HR architecture. This creates structured governance and scalable performance alignment. </p>
 
                 <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Organizational clarity | Governance maturity | Strategic execution at scale
+          <span class="outcome-label">Outcome:</span> </p> 
+                  <p class="outcome-points"> Organizational clarity | Governance maturity | Strategic execution at scale
         </p>
         
         <a href="#" class="learn-more">Explore Human Capital →</a>
@@ -121,8 +122,9 @@ Fragmented HR systems dilute accountability and slow execution. We re-engineer p
 Psychological strain and decision fatigue erode leadership effectiveness. We embed clinical mental resilience into workforce architecture in high-pressure environments. This stabilizes leadership capacity and protects sustained productivity.  </p>
 
         <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Reduced decision fatigue | Leadership stability | Protected productivity
-        </p>
+          <span class="outcome-label">Outcome:</span> </p> 
+        <p class="outcome-points"> Reduced decision fatigue | Leadership stability | Protected productivity </p>
+        
         <a href="https://health.lakesideasia.com/" target="_blank" class="learn-more">Explore Health →</a>
       </div>
 
@@ -137,7 +139,8 @@ Psychological strain and decision fatigue erode leadership effectiveness. We emb
 Engagement gaps and structural misalignment rarely surface until performance declines become visible. We deploy behavioral intelligence systems that identify hidden cultural risks before erosion occurs. This strengthens alignment and builds sustainable cultural resilience. </p>
 
                 <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Early risk detection | Sustainable cultural strength.
+          <span class="outcome-label">Outcome:</span>  </p>
+                  <p class="outcome-points"> Early risk detection | Sustainable cultural strength.
         </p>
         <a href="https://rohitnalwade.github.io/Happiness/" target="_blank" class="learn-more">Explore Happiness →</a>
       </div>
@@ -153,7 +156,8 @@ Engagement gaps and structural misalignment rarely surface until performance dec
 Environmental stressors directly influence cognitive clarity and executive function. We engineer performance-oriented environments that optimize air quality and workplace conditions at scale. This protects sustained cognitive output and measurable performance.  </p>
 
         <p class="pillar-outcome">
-          <span class="outcome-label">Outcome:</span>  Enhanced executive function | Cognitive clarity | Measurable workplace performance
+          <span class="outcome-label">Outcome:</span>  </p>
+       <p class="outcome-points"> Enhanced executive function | Cognitive clarity | Measurable workplace performance
         </p>
         <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Explore BreathEasier →</a>
       </div>
