--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
                  <ul class="outcome-list">
            <li> Enhanced executive function </li>
            <li> Cognitive clarity </li>
-           <li> Measurable workplace performance </li>
+           <li> Measurable performance </li>
          </ul>
         
         <a href="https://rohitnalwade.github.io/" target="_blank" class="learn-more">Explore BreathEasier →</a>
