--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Fragmented HR systems dilute accountability and slow execution. We re-engineer p
   <li>Strategic execution at scale</li>
 </ul>
         
-        <a href="#" class="learn-more">Discover HR Advisory & CHRO Services →</a>
+        <a href="#" class="learn-more">Discover HR & Fractional CHRO Advisory →</a>
       </div>
 
       <!-- Health -->
