--- a/index.html
+++ b/index.html
@@ -190,28 +190,28 @@ Environmental stressors directly influence cognitive clarity and executive funct
 <section class="growth-dilemma">
   <div class="container">
      <h2 class="section-title">The Growth Dilemma for Scaling Organizations</h2>
-    <p class="section-subtitle">As your organization scales, the challenges move from siloed tasks to systemic infrastructure needs. Is your foundation ready?</p>
+    <p class="section-subtitle">As organizations scale, challenges shift from operational tasks to systemic infrastructure demands. Growth no longer strains effort — it strains structure. Is your foundation ready?</p>
 
     <div class="growth-cards">
       <div class="card">
         <div class="card-icon">⚖️</div>
         <h3>The Compliance & Risk Trap</h3>
-        <p><strong>The Problem:</strong> Rapid growth often outpaces regulatory readiness. Shifting labor laws across India and the GCC create financial, legal, and reputational exposure.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> Through our Virtual CHRO leadership, we build compliance-driven HR infrastructure — ensuring governance, risk mitigation, and growth readiness as you scale.</p>
+        <p><strong>The Problem:</strong> Rapid growth often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR infrastructure remains reactive.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We architect compliance-driven HR systems that embed governance, risk discipline, and structural readiness — enabling sustainable scale.</p>
       </div>
 
       <div class="card">
         <div class="card-icon">🚀</div>
         <h3>The Talent War with Giants</h3>
-        <p><strong>The Problem:</strong> Growing organizations struggle to compete for top-tier talent due to slow hiring systems, unclear career pathways, and fragmented workforce strategy.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We deploy a "People OS" that reduces Time-to-Hire by 40%, strengthens leadership pipelines, and aligns workforce planning with business strategy.</p>
+        <p><strong>The Problem:</strong> As organizations scale, fragmented hiring systems and unclear leadership pathways limit access to top-tier talent and weaken succession depth.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with long-term growth strategy.</p>
       </div>
 
       <div class="card highlight-card">
         <div class="card-icon">🧠</div>
         <h3>The Productivity & Burnout Ceiling</h3>
-        <p><strong>The Problem:</strong> Hidden stressors — from mental fatigue to environmental factors like CO₂ exposure — silently erode focus, decision-making quality, and executive function.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We strengthen organizational “biological infrastructure” through clinical wellbeing frameworks and cognitive environment optimization — ensuring sustained performance.</p>
+        <p><strong>The Problem:</strong> Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and sustained performance.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We reinforce organizational performance infrastructure through clinical resilience frameworks and optimized work environments — protecting long-term cognitive capacity at scale.</p>
       </div>
     </div>
   </div>
