--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
       <div class="card">
         <div class="card-icon">🚀</div>
-        <h3>The Talent War with Giants</h3>
+        <h3>The Talent War with <br> Giants</h3>
         <p><strong>The Problem:</strong> As organizations scale, fragmented hiring systems and unclear leadership pathways limit access to top-tier talent and weaken succession depth.</p>
         <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with long-term growth strategy.</p>
       </div>
