--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="card">
         <div class="card-icon">🚀</div>
         <h3>The Talent War with <br> Giants</h3>
-        <p><strong>The Problem:</strong> As organizations scale, fragmented hiring systems and unclear leadership pathways limit access to top-tier talent and weaken succession depth.</p>
-        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with long-term growth strategy.</p>
+        <p><strong>The Problem:</strong> Scaling organizations struggle to compete for top-tier talent when hiring systems are fragmented and leadership pathways lack clarity, limiting succession depth and long-term capability.</p>
+        <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with strategic growth objectives.</p>
       </div>
 
       <div class="card highlight-card">
