--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="card">
         <div class="card-icon">⚖️</div>
         <h3>The Compliance & Risk Trap</h3>
-        <p><strong>The Problem:</strong> Rapid growth often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR infrastructure remains reactive.</p>
+        <p><strong>The Problem:</strong> Rapid expansion often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR systems stay reactive.</p>
         <p class="bridge-text"><strong>The Lakeside Bridge:</strong> We architect compliance-driven HR systems that embed governance, risk discipline, and structural readiness — enabling sustainable scale.</p>
       </div>
 
