--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
       <div class="card">
         <div class="card-icon">🚀</div>
-        <h3>The Talent War with <br> Giants</h3>
+        <h3>The Talent War with Giants</h3>
         <p><span class="label">The Problem:</span> Scaling organizations struggle to compete for top-tier talent when hiring systems are fragmented and leadership pathways lack clarity, limiting succession depth and long-term capability.</p>
         <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with strategic growth objectives.</p>
       </div>
