--- a/index.html
+++ b/index.html
@@ -196,22 +196,27 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="card">
         <div class="card-icon">⚖️</div>
         <h3>The Compliance & Risk Trap</h3>
-        <p><span class="label">The Problem:</span> Rapid expansion often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR systems stay reactive.</p>
-        <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> We architect compliance-driven HR systems that embed governance, risk discipline, and structural readiness — enabling sustainable scale.</p>
+        <p class="label">The Problem:</p> <p>Rapid expansion often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR systems stay reactive.</p>
+        <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> </p>
+        <p>We architect compliance-driven HR systems that embed governance, risk discipline, and structural readiness — enabling sustainable scale.</p>
       </div>
 
       <div class="card">
         <div class="card-icon">🚀</div>
         <h3>The Talent War with Giants</h3>
-        <p><span class="label">The Problem:</span> Scaling organizations struggle to compete for top-tier talent when hiring systems are fragmented and leadership pathways lack clarity, limiting succession depth and long-term capability.</p>
-        <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with strategic growth objectives.</p>
+        <p class="label">The Problem:</p> 
+        <p>Scaling organizations struggle to compete for top-tier talent when hiring systems are fragmented and leadership pathways lack clarity, limiting succession depth and long-term capability.</p>
+        <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> </p>
+        <p>We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with strategic growth objectives.</p>
       </div>
 
       <div class="card highlight-card">
         <div class="card-icon">🧠</div>
         <h3>The Productivity & Burnout Ceiling</h3>
-       <p><span class="label">The Problem:</span> Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and sustained performance.</p>
-        <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> We reinforce organizational performance infrastructure through clinical resilience frameworks and optimized work environments — protecting long-term cognitive capacity at scale.</p>
+       <p class="label">The Problem:</p> 
+        <p>Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and sustained performance.</p>
+        <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> <p>
+          <p>We reinforce organizational performance infrastructure through clinical resilience frameworks and optimized work environments — protecting long-term cognitive capacity at scale.</p>
       </div>
     </div>
   </div>
