--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="card">
         <div class="card-icon">⚖️</div>
         <h3>The Compliance & Risk Trap</h3>
-        <p class="label">The Problem:</p> <p>Rapid expansion often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR systems stay reactive.</p>
+        <p> <span class="label">The Problem:</span></p> <p>Rapid expansion often outpaces governance maturity. Evolving labor regulations across India and the GCC increase legal, financial, and reputational exposure when HR systems stay reactive.</p>
         <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> </p>
         <p>We architect compliance-driven HR systems that embed governance, risk discipline, and structural readiness — enabling sustainable scale.</p>
       </div>
