--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="card">
         <div class="card-icon">🚀</div>
         <h3>The Talent War with Giants</h3>
-        <p class="label">The Problem:</p> 
+        <p> <span class="label">The Problem:</span></p> 
         <p>Scaling organizations struggle to compete for top-tier talent when hiring systems are fragmented and leadership pathways lack clarity, limiting succession depth and long-term capability.</p>
         <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> </p>
         <p>We design integrated talent architecture that strengthens leadership pipelines, accelerates hiring velocity, and aligns workforce planning with strategic growth objectives.</p>
@@ -213,7 +213,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
       <div class="card highlight-card">
         <div class="card-icon">🧠</div>
         <h3>The Productivity & Burnout Ceiling</h3>
-       <p class="label">The Problem:</p> 
+       <p> <span class="label">The Problem:</span></p> 
         <p>Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and sustained performance.</p>
         <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> <p>
           <p>We reinforce organizational performance infrastructure through clinical resilience frameworks and optimized work environments — protecting long-term cognitive capacity at scale.</p>
