--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <div class="card-icon">🧠</div>
         <h3>The Productivity & Burnout Ceiling</h3>
        <p> <span class="label">The Problem:</span></p> 
-        <p>Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and sustained performance.</p>
+        <p>Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and long-term performance capacity.</p>
         <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> <p>
           <p>We reinforce organizational performance infrastructure through clinical resilience frameworks and optimized work environments — protecting long-term cognitive capacity at scale.</p>
       </div>
