--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
        <p> <span class="label">The Problem:</span></p> 
         <p>Hidden organizational stressors — from cognitive overload to environmental factors — silently erode executive function, decision quality, and long-term sustainable performance capacity.</p>
         <p class="bridge-text"><span class="label">The Lakeside Bridge:</span> <p>
-          <p>We reinforce organizational performance infrastructure through clinical resilience frameworks and optimized work environments — protecting long-term cognitive capacity at scale.</p>
+          <p>We strengthen organizational performance infrastructure through clinical resilience frameworks and optimized environments — protecting long-term cognitive capacity at scale.</p>
       </div>
     </div>
   </div>
