--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@ Environmental stressors directly influence cognitive clarity and executive funct
 
   <section class="institutional-impact">
   <div class="container">
-    <h2 class="section-title">Institutional Impact</h2>
-    <p class="section-subtitle">Proven impact across high-stakes, enterprise environments — from Tier-1 infrastructure and BFSI to global aviation and hospitality.</p>
+    <h2 class="section-title">Proven Institutional Impact</h2>
+    <p class="section-subtitle">Delivered at scale across Tier-1 infrastructure, BFSI, global aviation, and luxury hospitality ecosystems.</p>
     
     <div class="impact-table-container">
       <table class="impact-table">
