--- a/index.html
+++ b/index.html
@@ -223,13 +223,16 @@ Environmental stressors directly influence cognitive clarity and executive funct
 </section>
 
 
-  <!-- ================= Impact Section ================= -->
+ <!-- ================= Institutional Impact Section ================= -->
 
-  <section class="institutional-impact">
+<section class="institutional-impact">
   <div class="container">
+
     <h2 class="section-title">Proven Institutional Impact</h2>
-    <p class="section-subtitle">Delivered at scale across Tier-1 infrastructure, BFSI, global aviation, and luxury hospitality ecosystems.</p>
-    
+    <p class="section-subtitle">
+      Delivered at scale across Tier-1 infrastructure, BFSI, global aviation, and luxury hospitality ecosystems.
+    </p>
+
     <div class="impact-table-container">
       <table class="impact-table">
         <thead>
@@ -241,25 +244,38 @@ Environmental stressors directly influence cognitive clarity and executive funct
         <tbody>
           <tr>
             <td><strong>Energy & Telecom Conglomerates</strong></td>
-            <td>nterprise-wide mental health transformation and leadership architecture across <strong>10,000+ employees</strong>.</td>
+            <td>
+              Enterprise-wide mental health transformation and leadership architecture across 
+              <span class="impact-highlight">10,000+ employees</span>.
+            </td>
           </tr>
           <tr>
             <td><strong>Global Aviation & Luxury Hospitality</strong></td>
-            <td>Crisis leadership frameworks and high-stress resilience architecture for frontline operations.</td>
+            <td>
+              Crisis leadership frameworks and high-stress resilience architecture 
+              for frontline operations.
+            </td>
           </tr>
           <tr>
             <td><strong>Tier-1 Infrastructure & BFSI</strong></td>
-            <td>Digital HR transformation and cognitive infrastructure auditing for operational excellence.</td>
+            <td>
+              Digital HR transformation and cognitive infrastructure auditing 
+              for operational excellence.
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
-    
+
     <div class="impact-cta">
-      <p>Is your human capital infrastructure built for the next phase of scale?</p>
-      <p>Experience the Lakeside difference.</p>
-      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" class="btn-secondary">Request a Complimentary Cognitive Audit</a>
+      <p class="impact-question">
+        Is your human capital infrastructure built for the next phase of scale?
+      </p>
+      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-primary">
+        Request a Complimentary Cognitive Audit
+      </a>
     </div>
+
   </div>
 </section>
 
