--- a/index.html
+++ b/index.html
@@ -233,51 +233,60 @@ Environmental stressors directly influence cognitive clarity and executive funct
       Delivered at scale across Tier-1 infrastructure, BFSI, global aviation, and luxury hospitality ecosystems.
     </p>
 
-    <div class="impact-table-container">
-      <table class="impact-table">
-        <thead>
-          <tr>
-            <th>Sector</th>
-            <th>Scope of Engagement</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td><strong>Energy & Telecom Conglomerates</strong></td>
-            <td>
-              Enterprise-wide mental health transformation and leadership architecture across 
-              <span class="impact-highlight">10,000+ employees</span>.
-            </td>
-          </tr>
-          <tr>
-            <td><strong>Global Aviation & Luxury Hospitality</strong></td>
-            <td>
-              Crisis leadership frameworks and high-stress resilience architecture 
-              for frontline operations.
-            </td>
-          </tr>
-          <tr>
-            <td><strong>Tier-1 Infrastructure & BFSI</strong></td>
-            <td>
-              Digital HR transformation and cognitive infrastructure auditing 
-              for operational excellence.
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="impact-cards">
+
+      <!-- Card 1 -->
+      <div class="impact-card">
+        <div class="impact-accent"></div>
+        <div class="impact-content">
+          <h3>Energy & Telecom Conglomerates</h3>
+          <p>
+            Enterprise-wide mental health transformation and leadership architecture,
+            impacting over <span class="impact-highlight">10,000+ employees</span>.
+          </p>
+        </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="impact-card">
+        <div class="impact-accent"></div>
+        <div class="impact-content">
+          <h3>Global Aviation & Luxury Hospitality</h3>
+          <p>
+            Crisis leadership frameworks and high-stress resilience architecture
+            designed for frontline operations.
+          </p>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="impact-card">
+        <div class="impact-accent"></div>
+        <div class="impact-content">
+          <h3>Tier-1 Infrastructure & BFSI</h3>
+          <p>
+            Digital HR transformation and cognitive infrastructure auditing
+            driving operational excellence.
+          </p>
+        </div>
+      </div>
+
     </div>
 
     <div class="impact-cta">
       <p class="impact-question">
         Is your human capital infrastructure built for the next phase of scale?
       </p>
-      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-primary">
+
+      <!-- GOLD CTA BUTTON -->
+      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-gold">
         Request a Complimentary Cognitive Audit
       </a>
     </div>
 
   </div>
 </section>
+
 
 
 
