--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Environmental stressors directly influence cognitive clarity and executive funct
       </p>
 
       <!-- GOLD CTA BUTTON -->
-      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="btn-gold">
+      <a href="https://forms.gle/rsZpRCJudDQxaKkz8" target="_blank" class="impact-cta-btn">
         Request a Complimentary Cognitive Audit
       </a>
     </div>
